style.css
body {
    font-family: roboto, helvetica, sans-serif;
    margin: 0;
    overflow: scroll;
    display: flex;
    flex-flow: column wrap;
    justify-content: space-between;
}
.intro {
    display: flex;
    flex-direction: column;
    height: 80vh;
    background-image: url("./img/firewood-stacked.jpg");
    background-size: cover;
    background-position: center;
    position: relative;
}

.Header {
    display: flex; 
    /* background-color: #1F2937; */
    color: #F9FAF8;
    justify-content: space-between;
    align-items: center;
    padding: 20px 70px;   
}

.HeaderLogo {
    display: flex;
    gap: 10px;
    align-items: center;
}

.HeaderLogo span {
    font-size: 24px;

}

.Header img { 
    height: auto;
    width: 40px;
}

.Hero {
    display: flex;
    /* background-color: #1F2937; */
    padding: 20px 70px;
    flex-basis: 1000px;
}
.Hero h1 {
    font-size: 48px;
    font-weight: extra-bold;
    color: #F9FAF8;
    text-shadow: 2px 2px 10px rgb(164, 98, 11);
}

.Hero div {
    flex-basis: 1000px;
}
.Content {
    display: flex;
    flex-flow: column nowrap;
    justify-content: space-between;
    overflow: scroll;
}

.Content .section1 {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 50px 300px;
    background-color: #242424;
    border: 2px solid red;  
}


.Content .section1 .images {
    display: flex;
    justify-content: center;
    align-items: stretch;
    gap: 50px;
    
}

.Content .section1 .images div {
    display: flex;
    flex-wrap: wrap;
    flex-basis: 150px;
    border: 2px solid green;

}

.Content .section1 .images img {
    width: 150px;
    height:150px;
    object-fit: cover;
    border: 3px solid #3882f6;
    border-radius: 8px;
}

.Content .section2 {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 50px 300px;
    background-color: #626060;
    gap: 0px;
    border:2px solid red;
    
}

.Content .section2 p,
.Content .section2 .quote
 {
    display: flex;
    width: 800px;
    border: 2px solid red;
    margin: 0px;
}

.Content .section2 p {
    font-size: 36px;
    font-style: italic;
    font-weight: lighter;
}
.Content .section2 .quote {
    justify-content: flex-end;
    font-size: 25px;
    font-weight: 500;
}

.Content .section3 {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 100px 200px;
    background-color: #242424;
    border: 2px solid red;
    
}
.Content .section3 .container {
    flex-basis: 800px;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    border: 2px solid red;
    background-color: hsl(217, 61%, 13%);
    padding: 50px 80px;
}

.Content .section3 .container h3 {
    margin-top: 0;
}

.Content .section3 .container p {
    margin-bottom: 0;
}



.Footer {
    display: flex;
    background-color: #3b0909;
    padding: 30px 70px;
    justify-content: center;
    align-items: center;
}

ul {
    display: flex;   
    list-style: none;
    text-decoration: none;
    margin: 0;
    padding: 0;
    gap: 20px;
}

li {
    display: inline;
}
a {
    text-decoration: none;

}

.Hero button {
    height: 30px;
    width: 100px;
    background-color: #1F2937;
    border-radius: 5px;
    border:none;
    color:#e5e7eb;
}
.Hero button:hover {background-color: orange;}
.Hero button:active {transform: translateY(5px);}


.Content .section3 button {
    height: 30px;
    width: 100px;
    background-color: rgb(255, 130, 130);
    border-radius: 5px;
    border: 2px;
    color:#e5e7eb;
}
.Content .section3 button:hover {background-color: rgb(138, 138, 4);}
.Content .section3 button:active {transform: translateY(5px);}


.HeaderLogo,
li,
a, 
.secondaryTxt,
.Footer {
    font-size: 18px;
}

.HeaderLogo,
li,
a, 
.secondaryTxt,
.Footer,
.Content .section1 h1,
.Content .section2 p,
.Content .section3 .leftside {
    color:#e5e7eb;
    text-shadow: 2px 2px 10px rgb(164, 98, 11);
}

.Content .section2 .quote {
    color:#bcc9e3;
    text-shadow: 2px 2px 10px rgb(235, 210, 177);

}

